# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import playersRouter from "./players";
 import teamsRouter from "./teams";
 import turfsRouter from "./turfs";
 import bookingsRouter from "./bookings";
+import paymentsRouter from "./payments";
 import matchesRouter from "./matches";
 import statsRouter from "./stats";
 import notificationsRouter from "./notifications";
@@ -18,6 +19,7 @@ router.use(playersRouter);
 router.use(teamsRouter);
 router.use(turfsRouter);
 router.use(bookingsRouter);
+router.use(paymentsRouter);
 router.use(matchesRouter);
 router.use(statsRouter);
 router.use(notificationsRouter);
